# genai-hub-inference

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  semantix.yaml  semantixTEMPLATE.yaml  tox.ini
semantix_genai_inference/: __init__.py  cli.py
semantix_genai_inference/inference/: __init__.py  model_client.py
semantix_genai_inference/inference/llm/: alpaca.py  azure_openai.py  cohere.py  llama2.py  openai.py
tests/: test_azure_openai_client.py  test_cli.py  test_openai_client.py
